--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="background">
-        <a class="logo" href="http://www.mapillary.com"></a>
+        <a class="logo" href="https://www.mapillary.com"></a>
         <div class="button-container"><a id="explore">Explore</a></div>        
     </div>
     <a id="map"></a>
